--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,15 +8,28 @@
 
     <EditText
         android:id="@+id/guardian_api_key"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        style="@style/GuardianNewsStyle"
         android:hint="@string/guardian_api_key"
-        android:inputType="text" />
+        android:inputType="text"
+        app:layout_constraintHorizontal_weight="@dimen/guardian_api_key_weight"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/button_load_data"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/button_load_data"
+        style="@style/GuardianNewsStyle"
+        android:text="@string/button_load_data"
+        app:layout_constraintHorizontal_weight="@dimen/button_load_data_weight"
+        app:layout_constraintLeft_toRightOf="@+id/guardian_api_key"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <android.support.v17.leanback.widget.VerticalGridView
         android:id="@+id/guardian_news_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/margin_between_elements"
         app:layout_constraintTop_toBottomOf="@+id/guardian_api_key" />
 
 </android.support.constraint.ConstraintLayout>
