--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,12 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="GuardianNewsStyle">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginLeft">@dimen/margin_between_elements</item>
+        <item name="android:layout_marginRight">@dimen/margin_between_elements</item>
+        <item name="android:layout_marginTop">@dimen/margin_between_elements</item>
+    </style>
+
 </resources>
