--- a/app/src/main/res/layout/error_view.xml
+++ b/app/src/main/res/layout/error_view.xml
@@ -3,9 +3,9 @@
     android:layout_height="wrap_content">
 
     <TextView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/error_text_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
-        android:text="@string/error_text"
         android:textColor="@color/colorAccent" />
 </android.support.constraint.ConstraintLayout>
